# TOPReward

./: .envrc  .gitignore  CONTRIBUTING.md  NOTICE  README.md  pixi.toml  pyproject.toml
configs/data_loader/: huggingface.yaml  local.yaml
configs/dataset/: local_video.yaml  tea_use_steel_spoon.yaml
configs/experiments/: predict_gvl.yaml  predict_topreward.yaml
configs/model/: gemini.yaml
topreward/clients/: qwen.py
topreward/data_loaders/: huggingface.py  local.py
topreward/metrics/: instruction_reward.py
topreward/scripts/: predict.py  run_predict.sh
topreward/utils/: inference.py
